--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -17,4 +17,28 @@ body {
 a {
   text-decoration: none;
   color: initial;
+
+  &:focus,
+  &:focus-visible {
+    outline: none;
+  }
+}
+
+h1,
+h4,
+h5,
+p {
+  margin: 0;
+}
+
+button {
+  padding: 0;
+  border: none;
+  background: none;
+  cursor: pointer;
+
+  &:focus,
+  &:focus-visible {
+    outline: none;
+  }
 }
