feat: update main.scss

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -42,3 +42,14 @@ button {
     outline: none;
   }
 }
+
+input {
+  padding: 0;
+  border: none;
+  background: none;
+
+  &:focus,
+  &:focus-visible {
+    outline: none;
+  }
+}
